# spotdl

./: .gitignore  Cargo.toml  README.md  prepare_binaries.sh  renovate.json
.gitea/workflows/: rust.yaml
.github/workflows/: ci.yml  release.yml
src/: download.rs  fetcher.rs  id.rs  lib.rs  main.rs  metadata.rs  pipeline.rs  scan.rs  session.rs  tag.rs
src/download/: file.rs  memory.rs  null.rs  writer.rs
src/fetcher/: filesystem.rs  null.rs  rate_limited.rs  spotify.rs
src/metadata/: filesystem.rs  null.rs
src/pipeline/: stage_ffmpeg.rs  stage_organize.rs  stage_tag.rs
