[package]
name = "spotdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
clap = { version = "4.3.9", features = ["derive", "env"] }
flume = "0.10.14"
id3 = { version = "1.7.0", features = ["tokio"] }
indicatif = "0.17.5"
inquire = "0.6.2"
librespot = { git = "https://github.com/librespot-org/librespot", branch = "dev", default_features = false }
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tempfile = "3.6.0"
thiserror = "1.0.40"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wav = "1.0.0"
