[package]
name = "spotdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.7"
anyhow = "1.0.79"
async-trait = "0.1.68"
base64 = "0.21.2"
bytes = { version = "1.5.0", features = ["serde"] }
clap = { version = "4.4.12", features = ["derive", "env"] }
flume = "0.10.14"
futures = "0.3.28"
id3 = { version = "1.12.0", features = ["tokio"] }
indicatif = "0.17.5"
inquire = "0.6.2"
librespot = { git = "https://github.com/librespot-org/librespot", branch = "dev", default_features = false }
notify = "6.1.1"
reqwest = "0.11.18"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
tempfile = "3.9.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wav = "1.0.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
